Fixes basket items height, smoothscrolling on safari

--- a/src/app/order/fast-order/fast-order.component.less
+++ b/src/app/order/fast-order/fast-order.component.less
@@ -185,6 +185,12 @@
 
       .form-pickup {
         font-size: 16px;
+        align-items: center;
+        justify-content: center;
+
+        #pickup {
+          margin-left: -10px;
+        }
       }
     }
 
