--- a/src/app/shared/components/product/product.component.less
+++ b/src/app/shared/components/product/product.component.less
@@ -67,7 +67,7 @@
     top: 0;
     left: 0;
     opacity: 0.5;
-    animation: picture_move 2s;
+    animation: picture_move 1.5s;
     z-index: 9;
   }
 
